--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "tsc -b packages/x-core packages/x-cli",
+    "build": "lerna run build",
     "test": "lerna run test",
     "clean": "rimraf packages/**/lib"
   },
