--- a/packages/x-cli/package.json
+++ b/packages/x-cli/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/main.js",
   "scripts": {
-    "test": "ava"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
