--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "files": [],
     "references": [
-        { "path": "x-cli" },
+        { "path": "ocpi-datalayers" },
         { "path": "x-core" }
     ]
 }
