--- a/packages/ocpi-datalayers/package.json
+++ b/packages/ocpi-datalayers/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@ocpi/datalayers",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
-    "@ocpi/x-core": "^1.0.0",
+    "@quramy/x-core": "^0.0.0",
     "@types/node": "^8.0.28"
   },
   "devDependencies": {
