update deps and remove from typescript and @types/node from

--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "clean": "rimraf packages/**/lib"
   },
   "devDependencies": {
-    "@types/node": "^8.0.28",
-    "ava": "^0.22.0",
-    "lerna": "^2.9.0",
-    "rimraf": "^2.6.2",
-    "typescript": "~3.0.0"
+    "@types/node": "^13.5.2",
+    "lerna": "^3.20.2",
+    "rimraf": "^3.0.1",
+    "typescript": "^3.7.5"
   },
   "workspaces": [
     "packages/*"
