--- a/packages/ocpi-datalayers/package.json
+++ b/packages/ocpi-datalayers/package.json
@@ -6,10 +6,6 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@ocpi/apilayers": "^0.0.0",
-    "@types/node": "^8.0.28"
-  },
-  "devDependencies": {
-    "typescript": "~3.0.0"
+    "@ocpi/apilayers": "^0.0.0"
   }
 }
