--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/node": "^13.5.2",
+    "eslint": "^6.8.0",
     "lerna": "^3.20.2",
     "rimraf": "^3.0.1",
     "typescript": "^3.7.5"
