--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
-    "@types/aws-lambda": "^8.10.40"
+    "@types/aws-lambda": "^8.10.40",
+    "typeorm": "^0.2.22"
   }
 }
